[package]
name = "rust-libp2p-tokio-socks5"
version = "0.1.0"
authors = ["Tobin C. Harding <tobin@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
data-encoding = "2.2"
futures = "0.3"
futures-timer = "3.0"
get_if_addrs = "0.5"
ipnet = "2.3"
libp2p = { version = "0.21", default-features = false }
log = "0.4"
socket2 = "0.3"
tokio = { version = "0.2", features = ["tcp"] }
tokio-socks = "0.2"
